fix(ui): dark mode improvements

--- a/demo/src/css/app.sass
+++ b/demo/src/css/app.sass
@@ -40,11 +40,11 @@ $bgColor: #155799
   margin-left: auto
   margin-right: auto
 
-.q-dark
-  .q-item--dark
-    color: black
-  .q-item__label--caption
-    color: $grey-6
+// .q-dark
+//   .q-item--dark
+//     color: black
+//   .q-item__label--caption
+//     color: $grey-6
 
 body
   padding: 0
